--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "https://www.17yuzhou.com/join/7756139"
+        window.location.href = "http://www.hdgsbgds.com/join/7756139"
     </script>
 </body>
 </html>
